Changes for 2.3.5

New features:

Bug fixes:
........S. [ZBX-8541] fixed queue calculation when hosts with active items return from no data maintenance (asaveljevs)
..F....... [ZBX-8683] fixed misplaced 'Add' button for IT Services having child services (Alexei)

--------------------------------------------------------------------------------
Changes for 2.3.4

New features:
...G...PS. [ZBXNEXT-101] added functionality for changing log level at runtime, added new trace log level for extended web and vmware monitoring (asaveljevs, igors, wiper)
..F....... [ZBXNEXT-1467] added clear separation between 'add' and 'update' operations in the frontend (Alexei, Sasha)
..F....... [ZBXNEXT-570] implemented the ability to quickly display items on a graph from the latest data page (Ivo, Pavels)
.......PS. [ZBX-8367] added recalculating of unsupported items queue when changed "Refresh unsupported items" parameter (Juris, Sasha)
A.F....... [ZBXNEXT-1583] implemented new screen element types - "Graph prototype" and "Simple graph prototype" (Krists)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Italian, Polish and Slovak translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-2359] made server and proxy refuse to start if StartPollersUnreachable=0, but other pollers are started (asaveljevs)
....I..PS. [ZBX-8557] implemented housekeeper 30 minutes startup delay (Arturs)
A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)

Bug fixes:
..F....... [ZBX-8458] visual fixes in multiselect, actions, screens and maps (Oleg)
..F....... [ZBX-8682] added IT services sorting in dependencies tab (Oleg)
........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)