@@ -1153,7 +1153,7 @@ static void	pick_logfile(const char *directory, const char *filename, int mtime,
 		}
 	}
 	else
-		zabbix_log(LOG_LEVEL_DEBUG, "cannot process entry '%s'", logfile_candidate);
+		zabbix_log(LOG_LEVEL_DEBUG, "cannot process entry '%s': %s", logfile_candidate, zbx_strerror(errno));
 
 	zbx_free(logfile_candidate);
 }
@@ -1354,7 +1354,21 @@ static int	make_logfile_list(int is_logrt, const char *filename, const int *mtim
 		{
 			/* Do not make a logrt[] item NOTSUPPORTED if there are no matching log files or they are not */
 			/* accessible (can happen during a rotation), just log the problem. */
-			zabbix_log(LOG_LEVEL_WARNING, "there are no files matching '%s' in '%s'", format, directory);
+#ifdef _WINDOWS
+			zabbix_log(LOG_LEVEL_WARNING, "there are no files matching \"%s\" in \"%s\" or insufficient "
+					"access rights", format, directory);
+#else
+			if (0 != access(directory, X_OK))
+			{
+				zabbix_log(LOG_LEVEL_WARNING, "insufficient access rights (no \"execute\" permission) "
+						"to directory \"%s\": %s", directory, zbx_strerror(errno));
+			}
+			else
+			{
+				zabbix_log(LOG_LEVEL_WARNING, "there are no files matching \"%s\" in \"%s\"", format,
+						directory);
+			}
+#endif
 		}
 clean2:
 		regfree(&re);
